[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Debug/LevelSelect.gd" type="Script" id=1]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="BtnWorld" type="OptionButton" parent="Panel"]
anchor_right = 1.0
margin_left = 100.0
margin_top = 50.0
margin_right = -100.0
margin_bottom = 20.0

[node name="BtnLevel" type="OptionButton" parent="Panel"]
anchor_right = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = 20.0

[node name="BtnLaunch" type="Button" parent="Panel"]
margin_left = 476.0
margin_top = 220.0
margin_right = 592.0
margin_bottom = 240.0
text = "Launch"

[connection signal="item_selected" from="Panel/BtnWorld" to="." method="_on_BtnWorld_item_selected"]
[connection signal="pressed" from="Panel/BtnLaunch" to="." method="_on_BtnLaunch_pressed"]
